--- a/.jsbeautifyrc
+++ b/.jsbeautifyrc
@@ -9,11 +9,11 @@
     "max_preserve_newlines": 2,
     "jslint_happy": true,
     "brace_style": "collapse",
-    "keep_array_indentation": false,
-    "keep_function_indentation": false,
+    "keep_array_indentation": true,
+    "keep_function_indentation": true,
     "eval_code": false,
     "unescape_strings": false,
     "break_chained_methods": false,
     "space_before_conditional": true,
-    "wrap_line_length": 0
+    "wrap_line_length": 80
 }
